...
        var cellSize: CGSize?

        init() {
            super.init(frame: .zero)
            setAccessibilityElement(true)
            setAccessibilityRole(.staticText)
            setAccessibilityIdentifier("terminal.grid")
            setAccessibilityLabel("Terminal Grid")
        }

        @available(*, unavailable)
        required init?(coder _: NSCoder) {
            fatalError("init(coder:) has not been implemented")
...
